--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Moonbeams-from-the-Larger-Lunacy_4064
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Leacock, Stephen
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1221
     wikipedia: http://en.wikipedia.org/wiki/Stephen_Leacock
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/4064#Moonbeams-from-the-Larger-Lunacy
 gutenberg_bookshelf: Humor
 gutenberg_issued: '2003-05-01'
 gutenberg_type: Text
